@@ -1,3 +1,8 @@
+2013-10-05  Jose E. Marchesi  <jose.marchesi@oracle.com>
+
+	* baseboards/unix.exp: Add gdb settings to not use hardware
+	watchpoints in sparc64 running GNU/Linux.
+
 2013-06-17  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>
 
 	* runtest.exp (libdirs): New global variable.
